--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-<title>Tetris — Single File</title>
+<title>Tetris by Tamim</title>
 <style>
   :root{
     --bg:#0f1724;
